css/src/application.scss
/*
	Ethan Turkeltaub
		file: css/src/application.scss
*/

@import "lib/base";


/*
	= Appendix
		I. Media Queries
		II.
*/


/*
	I. Media Queries
*/

@media handheld, only screen and (max-width: 767px) { /* Handheld devices. */
	#contain > header {
		aside, nav {
			@include span-columns(12 omega, 12);
		}
	}
}

@media only screen and (-webkit-min-device-pixel-ratio: 2) { /* iPhone 4 */

}


/*
	II. Universal
*/

body {
	background: $base;
	color: $text;
	font: 400 16px/1.75em $serif;
}

a {
	border-bottom: 1px solid $dark-grey;
	color: $text;
	text-decoration: none;

	&:hover {
		color: $green;
	}
}

blockquote {
	border-left: 5px solid $grey;
	color: darken($dark-grey, 30%);
	font-style: italic;
	margin-bottom: 1em;
	padding-left: 1em;
}

em {
	font-style: italic;
}

figure {
	a {
		border: none;
	}

	figcaption {
		color: $dark-grey;
		font-style: italic;
	}
}

h1, h2, h3, h4, h5, h6 {
	font-family: $sans-serif;
	font-weight: bold;
	text-transform: uppercase;
}

img {
	max-width: 100%;
}

li {
	p + p {
		margin: 0;
	}

	& + li {
		margin-top: 1.25em;
	}
}

p + p {
	margin-top: 1.75em;
}

strong {
	font-weight: bold;
}

.fluid-width-video-wrapper {
	margin: 1.75em 0;
}


/*
	III. Header
*/

#contain > header {
	background: $grey;
	padding: 1em 0;

	.inner {
		@include container;
	}

	a {
		border: none;
	}

	aside {
		@include span-columns(4, 12);

		@media (max-width: 767px) {
			@include span-columns(12 omega, 12);
		}
	}

	nav {
		@include span-columns(8 omega, 12);

		@media (max-width: 767px) {
			@include span-columns(12 omega, 12);

			ul {
				float: left !important;
				margin-top: 0.5em;
			}
		}

		font-size: 0.9em;

		ul {
			float: right;

			li {
				display: inline-block;

				& + li {
					margin-top: 0;
					padding-left: 1.25em;
				}
			}
		}
	}
}


/*
	IV. Main
*/

#main {
	.page .section {
		@include container;

		margin: 2em auto;

		aside {
			@include span-columns(3, 12);

			@media (max-width: 767px) {
				@include span-columns(12 omega, 12);

				figure {
					display: none;
				}

				ul li {
					display: inline;
				}
			}

			figure img {
				max-width: 75%;
			}

			ul li {
				font-size: 0.9em;

				& + li {
					margin-top: 0;
				}
			}
		}

		section {
			@include span-columns(9 omega, 12);

			@media (max-width: 767px) {
				@include span-columns(12 omega, 12);
			}
		}
	}

	.page.blog {
		@include container;

		margin: 2em auto;

		.inner {
			@include span-columns(9 omega, 12);
			@include suffix(3);

			@media (max-width: 767px) {
				@include span-columns(12 omega, 12);
				@include suffix(0);
			}
		}

		.inner > header {
			border-bottom: 1px solid $grey;
			font-style: italic;
			margin-bottom: 3em;
			padding-bottom: 0.5em;

			span {
				font-style: normal;
			}
		}

		h2 {
			font-size: 1.5em;
		}

		article {
			header {
				margin-bottom: 1.75em;
			}

			footer {
				color: $dark-grey;
				font-size: 0.9em;
				font-style: italic;
				margin-top: 1.75em;

				a {
					color: darken($dark-grey, 15%);

					&:hover {
						color: $green;
					}
				}

				ul li {
					display: inline-block;

					& + li {
						margin-top: 0;
					}
				}
			}

			& + article {
				border-top: 1px solid $grey;
				margin-top: 4em;
				padding-top: 4em;
			}
		}
	}
}


/*
	V. Footer
*/

#contain > footer {
	border-top: 1px solid $grey;
	padding: 2em 0 4em;
	margin-top: 6em;

	.inner {
		@include container;

		section {
			@include span-columns(6, 12);

			@media (max-width: 767px) {
				@include span-columns(12 omega, 12);

				p + p {
					margin-top: 0.5em !important;
				}
			}
		}

		nav {
			@include span-columns(6 omega, 12);

			@media (max-width: 767px) {
				@include span-columns(12 omega, 12);

				ul {
					float: left !important;
					margin-top: 1.75em;
				}
			}

			font-size: 1.25em;

			a {
				border: none;
			}

			ul {
				float: right;

				li {
					display: inline-block;

					& + li {
						margin-left: 0.25em;
						margin-top: 0;
					}
				}
			}
		}

		p {
			font-size: 0.9em;

			span {
				color: $dark-grey;

				a {
					color: $dark-grey;
				}
			}
		}
	}
}

